--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "start": "node"
+    "start": "node ./src/index.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
